[package]
name = "SmsBomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.64"
reqwest = { version = "0.11.4", features = ["json", "blocking", "socks"] }
reqwest_cookie_store = "0.5.0"
cookie_store = "0.19.0"
threadpool = "1.8.1"
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
md5 = "0.7.0"